dont add handlers to tile variables if they're not going to be used